# contextgrid

./: .env.example  .gitignore  AGENTS.md  API.md  CLAUDE.md  FUTURE_FEATURES.md  IMPLEMENTATION_SUMMARY.md  MIGRATION_SUMMARY.md  PRD_WEB_UI.md  README.md  ROADMAP.md  build.py  cg.py  pyproject.toml  repomix-output.md  requirements.txt  start.bat  start.sh  test_db_abstraction.sh  test_system.sh
.claude/: settings.local.json
.superpowers/sdd/: progress.md
api/: __init__.py  config.py  db.py  middleware.py  models.py  server.py
docs/: API.md  FUTURE_FEATURES.md  MIGRATION_SUMMARY.md  PYTHON_APP_RUN_MODES.html  PYTHON_APP_RUN_MODES.md  Performance-Opt-Expert-Prompt.md  perf-baselines.md  repomix-review.md
docs/superpowers/plans/: 2026-06-21-activity-card-enrichment.md  (+2 more)
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
scripts/: build_frontend.sh  init_database.py  init_db.sql  init_mysql.sql  migrate_sqlite_to_mysql.py  test_mysql_connection.py
src/: api_client.py  async_api_client.py  async_models.py  cli.py  config.py  db.py  main.py  models.py  project_types.py
src/utils/: paths.py
tests/: conftest.py  test_project_limits.py  test_project_types.py  test_readme_snapshot.py  test_request_timing.py  test_security.py
web/: app.py
web/templates/: analytics.html  base.html  diagrams.html  error.html  graph.html  home.html  kanban.html  project_detail.html  project_edit.html  project_form.html  projects.html  tags.html  tasks.html  templates.html
(+54 files in other folders)
