[project]
name = "contextgrid"
version = "0.1.0"
description = "Local-first personal project tracker."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "fastapi>=0.104.0",
  "uvicorn[standard]>=0.24.0",
  "pydantic>=2.0.0",
  "python-dotenv>=1.0.0",
  "pymysql>=1.1.0",
  "requests>=2.31.0",
  "httpx>=0.25.0",
  "jinja2>=3.1.0",
  "python-multipart>=0.0.6",
]

[dependency-groups]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
]

[tool.uv]
package = false
